--- a/info.yaml
+++ b/info.yaml
@@ -1,17 +1,17 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
-  language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  title:        "7-Segment Digital Desk Clock"      # Project title
+  author:       "Samuel Ellicott"                   # Your name
+  discord:      "@sellicott"                        # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "7-Segment Desk Clock"              # One line description of what your project does
+  language:     "Verilog"                           # other examples include SystemVerilog, Amaranth, VHDL, etc
+  clock_hz:     50000000                            # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_sellicott_desk_clock"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
@@ -22,11 +22,11 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
+  ui[0]: "refclk"
+  ui[1]: "use_refclk"
+  ui[2]: "fast_set"
+  ui[3]: "minutes_set"
+  ui[4]: "hours_set"
   ui[5]: ""
   ui[6]: ""
   ui[7]: ""
