--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,21 +13,11 @@ jobs:
         shell: bash
         run: sudo apt-get update && sudo apt-get install -y iverilog
 
-      # Set Python up and install cocotb
-      - name: Setup python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install Python packages
-        shell: bash
-        run: pip install -r test/requirements.txt
-
       - name: Run tests
         run: |
           cd test
           make clean
-          make
+          make -f makefile.iverilog
           # make will return success even if the test fails, so check for failure in the results.xml
           ! grep failure results.xml
 
