update build scripts

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,9 @@ jobs:
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
-          name: test-vcd
+          name: clk_gen_tb vcd
           path: |
-            test/tb.vcd
+            test/clk_gen_tb.vcd
             test/results.xml
+          path: |
+            test/
