--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Run tests
         run: |
           cd test
-          make clean
+          make -f makefile.iverilog clean
           make -f makefile.iverilog
           # make will return success even if the test fails, so check for failure in the results.xml
           ! grep failure results.xml
