--- a/test/makefile.iverilog
+++ b/test/makefile.iverilog
@@ -2,7 +2,7 @@ SRC_DIR = $(PWD)/../src
 
 .PHONY: binary_to_bcd_tb clock_register_tb button_debounce_tb clk_gen_tb all clean
 
-all: clk_gen_tb.vcd button_debounce_tb.vcd clock_register_tb.vcd binary_to_bcd_tb.vcd
+all: clk_gen_tb.fst button_debounce_tb.fst clock_register_tb.fst binary_to_bcd_tb.fst
 
 binary_to_bcd_tb: binary_to_bcd_tb.vcd
 	gtkwave -o $< $@.gtkw
@@ -30,6 +30,9 @@ clk_gen_tb.vvp: clk_gen_tb.v $(SRC_DIR)/clk_gen.v
 
 %.vcd : %.vvp
 	vvp $^
+
+%.fst : %.vvp
+	vvp $^ -fst
 
 clean:
 	-rm *.vcd
