--- a/test/makefile.iverilog
+++ b/test/makefile.iverilog
@@ -10,6 +10,7 @@ SRC_TESTBENCHES += clock_to_bcd_tb.v
 SRC_TESTBENCHES += max7219_tb.v
 SRC_TESTBENCHES += max7219_settings_tb.v
 SRC_TESTBENCHES += output_wrapper_tb.v
+SRC_TESTBENCHES += display_controller_tb.v
 
 TESTBENCH_FST = $(SRC_TESTBENCHES:.v=.fst)
 TESTBENCH_LOG = $(SRC_TESTBENCHES:.v=.log)
@@ -19,6 +20,14 @@ TESTBENCH_SIM = $(basename $(SRC_TESTBENCHES))
 
 all: $(TESTBENCH_FST)
 	cat $(TESTBENCH_LOG) > logfile.txt
+
+display_controller_tb.vvp: display_controller_tb.v \
+  $(SRC_DIR)/display_controller.v \
+  $(SRC_DIR)/clk_gen.v \
+  $(SRC_DIR)/output_wrapper.v \
+  $(SRC_DIR)/clock_to_bcd.v $(SRC_DIR)/binary_to_bcd.v \
+  $(SRC_DIR)/max7219_settings.v $(SRC_DIR)/max7219.v
+	iverilog -o $@ $^
 
 output_wrapper_tb.vvp: output_wrapper_tb.v \
   $(SRC_DIR)/output_wrapper.v \
