--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,8 +16,8 @@ jobs:
       - name: Run tests
         run: |
           cd test
-          make -f makefile.iverilog clean
-          make -f makefile.iverilog
+          make  clean
+          make
           # make will return success even if the test fails, so check for failure in the results logfile
           ! grep FAILED logfile.txt
 
