--- a/info.yaml
+++ b/info.yaml
@@ -11,13 +11,24 @@ project:
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_sellicott_desk_clock"
+  top_module:  "tt_um_desk_clock_example"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "project.v"
+    - "tt_um_digital_clock_example.v"
+    - "clock_wrapper.v"
+    - "clk_gen.v"
+    - "button_debounce.v"
+    - "clock_register.v"
+    - "output_wrapper.v"
+    - "decimal_point_controller.v"
+    - "clock_to_bcd.v"
+    - "binary_to_bcd.v"
+    - "display_controller.v"
+    - "max7219_settings.v"
+    - "max7219.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
