--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,8 +16,8 @@ jobs:
       - name: Run tests
         run: |
           cd test
-          make  clean
-          make
+          make -f makefile clean
+          make -f makefile
           # make will return success even if the test fails, so check for failure in the results logfile
           ! grep FAILED logfile.txt
 
