fix gl test environment variable

--- a/.github/workflows/gds.yaml
+++ b/.github/workflows/gds.yaml
@@ -28,6 +28,8 @@ jobs:
   gl_test:
     needs: gds
     runs-on: ubuntu-24.04
+   env: 
+      TEST_DIR: ${{ github.workspace }}/test
     steps:
     - name: Download GDS artifact
       uses: actions/download-artifact@v4
