--- a/.github/workflows/gds.yaml
+++ b/.github/workflows/gds.yaml
@@ -29,6 +29,11 @@ jobs:
     needs: gds
     runs-on: ubuntu-24.04
     steps:
+     - name: checkout repo
+       uses: actions/checkout@v4
+       with:
+         submodules: recursive
+
     - name: Download GDS artifact
       uses: actions/download-artifact@v4
       with:
