--- a/test/makefile
+++ b/test/makefile
@@ -1,6 +1,6 @@
 SRC_DIR = $(PWD)/../src
 
-
+# List of testbenches to run automatically
 SRC_TESTBENCHES := clk_gen_tb.v
 SRC_TESTBENCHES += button_debounce_tb.v
 SRC_TESTBENCHES += clock_register_tb.v
@@ -12,18 +12,59 @@ SRC_TESTBENCHES += max7219_settings_tb.v
 SRC_TESTBENCHES += output_wrapper_tb.v
 SRC_TESTBENCHES += display_controller_tb.v
 SRC_TESTBENCHES += clock_wrapper_tb.v
+SRC_TESTBENCHES += tiny_tapeout_tb.v
 
+# Generate lists of output files from the list of testbenches
 TESTBENCH_FST = $(SRC_TESTBENCHES:.v=.fst)
 TESTBENCH_LOG = $(SRC_TESTBENCHES:.v=.log)
 TESTBENCH_SIM = $(basename $(SRC_TESTBENCHES))
-
 .PHONY: $(TESTBENCH_SIM) all clean
 
+# For doing gate level simulation
+PDK_ROOT = $(HOME)/.volare
+COMPILE_ARGS    += -DGL_TEST
+COMPILE_ARGS    += -DFUNCTIONAL
+COMPILE_ARGS    += -DUSE_POWER_PINS
+COMPILE_ARGS    += -DSIM
+COMPILE_ARGS    += -DUNIT_DELAY=\#1
+
+# What to do when just "make" is run
+# Build all the testbench output dump files
 all: $(TESTBENCH_FST)
 	cat $(TESTBENCH_LOG) > logfile.txt
 
+# Rules for compiling each testbench (how to generate a elaborated netlist ".vvp" file)
+# The TESTBENCH_FST variable genenerates a list of elaborated files from the list of 
+# testbenches
+tiny_tapeout_gl_tb.vvp: tiny_tapeout_tb.v \
+  $(PDK_ROOT)/sky130A/libs.ref/sky130_fd_sc_hd/verilog/primitives.v \
+  $(PDK_ROOT)/sky130A/libs.ref/sky130_fd_sc_hd/verilog/sky130_fd_sc_hd.v \
+  tt_um_digital_clock_example.v \
+  $(SRC_DIR)/refclk_sync.v \
+  $(SRC_DIR)/clk_gen.v \
+  $(SRC_DIR)/bcd_to_7seg.v \
+  test_max7219_moc.v test_7seg_to_bcd.v
+	iverilog -o $@ $(COMPILE_ARGS) $^
+
+tiny_tapeout_tb.vvp: tiny_tapeout_tb.v \
+  $(SRC_DIR)/tt_um_digital_clock_example.v \
+  $(SRC_DIR)/clock_wrapper.v \
+  $(SRC_DIR)/refclk_sync.v \
+  $(SRC_DIR)/clk_gen.v \
+  $(SRC_DIR)/button_debounce.v \
+  $(SRC_DIR)/clock_register.v \
+  $(SRC_DIR)/decimal_point_controller.v \
+  $(SRC_DIR)/display_controller.v \
+  $(SRC_DIR)/output_wrapper.v \
+  $(SRC_DIR)/clock_to_bcd.v $(SRC_DIR)/binary_to_bcd.v \
+  $(SRC_DIR)/max7219_settings.v $(SRC_DIR)/max7219.v \
+  $(SRC_DIR)/bcd_to_7seg.v \
+  test_max7219_moc.v test_7seg_to_bcd.v
+	iverilog -o $@ $^
+
 clock_wrapper_tb.vvp: clock_wrapper_tb.v \
   $(SRC_DIR)/clock_wrapper.v \
+  $(SRC_DIR)/refclk_sync.v \
   $(SRC_DIR)/clk_gen.v \
   $(SRC_DIR)/button_debounce.v \
   $(SRC_DIR)/clock_register.v \
@@ -38,6 +79,7 @@ clock_wrapper_tb.vvp: clock_wrapper_tb.v \
 
 display_controller_tb.vvp: display_controller_tb.v \
   $(SRC_DIR)/display_controller.v \
+  $(SRC_DIR)/refclk_sync.v \
   $(SRC_DIR)/clk_gen.v \
   $(SRC_DIR)/output_wrapper.v \
   $(SRC_DIR)/clock_to_bcd.v $(SRC_DIR)/binary_to_bcd.v \
@@ -52,28 +94,46 @@ output_wrapper_tb.vvp: output_wrapper_tb.v \
   test_max7219_moc.v test_7seg_to_bcd.v
 	iverilog -o $@ $^
 
-max7219_settings_tb.vvp: max7219_settings_tb.v $(SRC_DIR)/max7219_settings.v $(SRC_DIR)/max7219.v
+max7219_settings_tb.vvp: max7219_settings_tb.v \
+  $(SRC_DIR)/max7219_settings.v \
+  $(SRC_DIR)/max7219.v
 	iverilog -o $@ $^
 
-max7219_tb.vvp: max7219_tb.v $(SRC_DIR)/max7219.v test_max7219_moc.v test_7seg_to_bcd.v  $(SRC_DIR)/bcd_to_7seg.v
+max7219_tb.vvp: max7219_tb.v \
+  $(SRC_DIR)/max7219.v \
+  $(SRC_DIR)/bcd_to_7seg.v \
+  test_max7219_moc.v test_7seg_to_bcd.v
 	iverilog -o $@ $^
 
-clock_to_bcd_tb.vvp: clock_to_bcd_tb.v $(SRC_DIR)/clock_to_bcd.v $(SRC_DIR)/binary_to_bcd.v
+bcd_to_7seg_tb.vvp: bcd_to_7seg_tb.v \
+  $(SRC_DIR)/bcd_to_7seg.v
 	iverilog -o $@ $^
 
-bcd_to_7seg_tb.vvp: bcd_to_7seg_tb.v $(SRC_DIR)/bcd_to_7seg.v
+clock_to_bcd_tb.vvp: clock_to_bcd_tb.v \
+  $(SRC_DIR)/clock_to_bcd.v \
+  $(SRC_DIR)/binary_to_bcd.v
 	iverilog -o $@ $^
 
-binary_to_bcd_tb.vvp: binary_to_bcd_tb.v $(SRC_DIR)/binary_to_bcd.v
+binary_to_bcd_tb.vvp: binary_to_bcd_tb.v \
+  $(SRC_DIR)/binary_to_bcd.v
 	iverilog -o $@ $^
 
-clock_register_tb.vvp: clock_register_tb.v $(SRC_DIR)/clock_register.v $(SRC_DIR)/button_debounce.v $(SRC_DIR)/clk_gen.v
+clock_register_tb.vvp: clock_register_tb.v \
+  $(SRC_DIR)/clock_register.v \
+  $(SRC_DIR)/button_debounce.v \
+  $(SRC_DIR)/refclk_sync.v \
+  $(SRC_DIR)/clk_gen.v
 	iverilog -o $@ $^
 
-button_debounce_tb.vvp: button_debounce_tb.v $(SRC_DIR)/button_debounce.v $(SRC_DIR)/clk_gen.v
+button_debounce_tb.vvp: button_debounce_tb.v \
+  $(SRC_DIR)/button_debounce.v \
+  $(SRC_DIR)/refclk_sync.v \
+  $(SRC_DIR)/clk_gen.v
 	iverilog -o $@ $^
 
-clk_gen_tb.vvp: clk_gen_tb.v $(SRC_DIR)/clk_gen.v
+clk_gen_tb.vvp: clk_gen_tb.v \
+  $(SRC_DIR)/refclk_sync.v \
+  $(SRC_DIR)/clk_gen.v
 	iverilog -o $@ $^
 
 # Generate output files from elaborated simulation
@@ -91,3 +151,6 @@ clean:
 	-rm *.vcd
 	-rm *.vvp
 	-rm *.fst
+	-rm *.log
+	-rm results.xml
+	-rm logfile.txt
