--- a/test/makefile.gl
+++ b/test/makefile.gl
@@ -7,17 +7,18 @@ TOPLEVEL_LANG ?= verilog
 SRC_DIR = $(PWD)/../src
 PROJECT_SOURCES = tt_um_digital_clock_example.v \
   clock_wrapper.v \
-  clk_gen.v \
-  button_debounce.v \
-  clock_register.v \
-  decimal_point_controller.v \
-  display_controller.v \
-  output_wrapper.v \
-  clock_to_bcd.v \
-  binary_to_bcd.v \
-  max7219_settings.v \
-  max7219.v \
-  bcd_to_7seg.v \
+  input/refclk_sync.v \
+  input/clk_gen.v \
+  input/button_debounce.v \
+  core/clock_register.v \
+  core/decimal_point_controller.v \
+  core/display_controller.v \
+  core/output_wrapper.v \
+  output/clock_to_bcd.v \
+  output/binary_to_bcd.v \
+  output/max7219_settings.v \
+  output/max7219.v \
+  output/bcd_to_7seg.v \
   ../test/test_max7219_moc.v \
   ../test/test_7seg_to_bcd.v
 
@@ -42,8 +43,9 @@ VERILOG_SOURCES += $(PDK_ROOT)/sky130A/libs.ref/sky130_fd_sc_hd/verilog/sky130_f
 
 # this gets copied in by the GDS action workflow
 VERILOG_SOURCES += $(PWD)/gate_level_netlist.v
-VERILOG_SOURCES += $(SRC_DIR)/clk_gen.v
-VERILOG_SOURCES += $(SRC_DIR)/bcd_to_7seg.v
+VERILOG_SOURCES += $(SRC_DIR)/input/refclk_sync.v
+VERILOG_SOURCES += $(SRC_DIR)/input/clk_gen.v
+VERILOG_SOURCES += $(SRC_DIR)/output/bcd_to_7seg.v
 VERILOG_SOURCES += $(PWD)/test_max7219_moc.v
 VERILOG_SOURCES += $(PWD)/test_7seg_to_bcd.v
 
